Fix spacing and content

--- a/main.scss
+++ b/main.scss
@@ -31,6 +31,20 @@ section.top-section {
     }
 }
 
+h4, h3 {
+    margin-bottom: .5rem;
+    margin-top: 2rem;
+}
+
+p {
+    margin-top: .5rem;
+    margin-bottom: .5rem;
+}
+
+section {
+    margin-bottom: 2rem;
+}
+
 .hidden {
     visibility: hidden;
     height: 0;
